--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -13,7 +13,7 @@
 \maketitle
 
 \begin{abstract}
-	Salam
+	Salam2223232
 	
 	
 In this research, a neural network methodology was implemented to predict the forced convective heat transfer coefficient of nanofluids. Various solutions with distinct TiO2 nanoparticle concentrations were synthesized through the two-step method and directed upward within a vertical pipe under both laminar and turbulent flow conditions. The investigation covered diverse operational parameters, including heat flux, thermal conductivity of fluids, nanoparticle concentration, and flow Reynolds number, to quantify the convective heat transfer coefficient. These operational parameters were incorporated as inputs into an artificial neural network to model the convective heat transfer coefficient. Evaluation metrics, such as mean square error and correlation coefficient, were computed, revealing the remarkable performance of the neural network in capturing the underlying processes. The introduction of nanoparticles into the base fluid significantly amplified the forced convective heat transfer coefficient, with more pronounced effects observed in base fluids exhibiting lower thermal conductivity and flows characterized by higher Reynolds numbers and elevated heat fluxes. The findings underscore the efficacy of neural networks in elucidating the complex interactions governing convective heat transfer in nanofluids.
