--- a/paper/sn-article-template/sn-article.tex
+++ b/paper/sn-article-template/sn-article.tex
@@ -296,7 +296,7 @@ The experimental and predicted Nu numbers for Reynolds numbers 2960 and 3960 are
 
 \subsection{Effect of Nanoparticle Concentrations on the Convective Heat Transfer Coefficient in Distilled Water}
 
-In Figures 3(a) and 3(b), the experimental results and predicted data from the ANN were compared. The axial profiles of the heat transfer coefficient of nanofluids show an increase with increasing particle concentration. The enhancement is more pronounced at higher Reynolds numbers. For instance, at $Re = 2960$ and $Re = 3960$, the maximum enhancement with 1.50 vol.\% TiO$_2$ nanofluids is about 40\% (see Fig. 3(a)) and more than 52\% (see Fig. 3(b)), respectively. The good agreement between experimental results and predicted data demonstrates the high accuracy of the ANN in predicting this process.
+In Figures 3(a) and 3(b), the experimental results and predicted data from the ANN were compared. The axial profiles of the heat transfer coefficient of nanofluids show an increase with increasing particle concentration. The enhancement is more pronounced at higher Reynolds numbers. For instance, at $Re = 2960$ and $Re = 3960$, the maximum enhancement with 1.50 vol.\% TiO$_2$ nanofluids is about 40\% (see Fig. 3(a)) and more than 52\% (see Fig. 3(b)), respectively. The good agreement between experimental results and predicted data demonstrates the high accuracy of the ANN in predicting this process. \cite{chen2023}
 
 \subsection{Convective Heat Transfer Coefficient of Water/Ethylene Glycol Mixture}
 
@@ -329,8 +329,8 @@ In this study, experimental work has been conducted to investigate the heat tran
 	\item Good agreement between experimental data and predicted results of the ANN shows that the ANN can be used to model this process with high accuracy, except for higher heat flux.
 \end{itemize}
 
-\bibliographystyle{unsrt}
-\bibliography{ref.bib}  % Replace with your actual file name
+%\bibliographystyle{unsrt}
+\bibliography{sn-bibliography}% common bib file
 
 \appendix
 
@@ -444,7 +444,7 @@ In this study, experimental work has been conducted to investigate the heat tran
 %% file, and delete the associated \verb+\bibliography+ commands.                            %%
 %%===========================================================================================%%
 
-\bibliography{sn-bibliography}% common bib file
+
 %% if required, the content of .bbl file can be included here once bbl is generated
 %%\input sn-article.bbl
 
