--- a/paper/sn-article-template/sn-bibliography.bib
+++ b/paper/sn-article-template/sn-bibliography.bib
@@ -1,163 +1,145 @@
-%% Journal article
-@article{bib1,
-  author		= "Campbell, S. L. and Gear, C. W.",
-  title			= "The index of general nonlinear {D}{A}{E}{S}",
-  journal		= "Numer. {M}ath.",
-  volume		= "72",
-  number		= "2",
-  pages			= "173--196",
-  year			= "1995"
+@article{ref1,
+	title={Hydrodynamic and heat transfer study of dispersed fluids with submicron metallic oxide particle},
+	author={Pak, B.C. and Cho, Y.I.},
+	journal={Exp. Heat Transfer},
+	year={1998},
+	volume={11},
+	pages={151–170}
 }
 
-%% Journal article with DOI
-@article{bib2,
-  author		= "Slifka, M. K. and Whitton, J. L.",
-  title			= "Clinical implications of dysregulated cytokine production",
-  journal		= "J. {M}ol. {M}ed.",
-  volume		= "78",
-  pages			= "74--80",
-  year			= "2000",
-  doi			= "10.1007/s001090000086"
+@article{ref2,
+	title={Numerical investigation into the convective heat transfer of TiO2 nanofluids flowing through a straight tube under the laminar flow conditions},
+	author={He, Y. and Men, Y. and Zhao, Y. and Lu, H. and Ding, Y.},
+	journal={Appl. Therm. Eng.},
+	year={2009},
+	volume={29},
+	pages={1965-1972}
 }
 
-%% Journal article
-@article{bib3,
-  author		= "Hamburger, C.",
-  title			= "Quasimonotonicity, regularity and duality for nonlinear systems of 
-					partial differential equations",
-  journal		= "Ann. Mat. Pura. Appl.",
-  volume		= "169",
-  number		= "2",
-  pages			= "321--354",
-  year			= "1995"
+@article{ref3,
+	title={Prediction of heat transfer due to presence of copper–water nanofluid using resilient-propagation neural network},
+	author={Santra, A. K. and Chakraborty, N. and Sen, S.},
+	journal={International Journal of Thermal Sciences},
+	year={2009},
+	volume={48},
+	pages={1311–1318}
 }
 
-%% book, authored
-@book{bib4,
-  author		= "Geddes, K. O. and Czapor, S. R. and Labahn, G.",
-  title			= "Algorithms for {C}omputer {A}lgebra",
-  address		= "Boston",
-  publisher		= "Kluwer",
-  year			= "1992"
+@article{ref4,
+	title={Experimental and numerical investigation of heat transfer in a miniature heat sink utilizing silica nanofluid},
+	author={Fazeli, S. A. and Hosseini Hashemi, S. M. and Zirakzadeh, H. and Mehdi Ashjaee},
+	journal={Superlattices and Microstructures},
+	year={2012},
+	volume={51},
+	pages={247–264}
 }
 
-%% Item 8. Book, chapter
-@incollection{bib5,
-  author		= "Broy, M.",
-  title			= "Software engineering---from auxiliary to key technologies",
-  editor		= "Broy, M. and Denert, E.",
-  booktitle		= "Software Pioneers",
-  pages			= "10--13",
-  address		= "New {Y}ork",
-  publisher		= "Springer",
-  year			= "1992"
+@article{ref5,
+	title={Investigation of pool boiling of nanofluids using artificial neural networks and correlation development techniques},
+	author={Balcilar, M. and Dalkilic, A.S. and Suriyawong, A. and Yiamsawas, T. and Wongwises, S.},
+	journal={International Communications in Heat and Mass Transfer},
+	year={2012},
+	volume={39},
+	pages={424–431}
 }
 
-%% Book, edited
-@book{bib6,
-  editor		= "Seymour, R. S.",
-  title			= "Conductive {P}olymers",
-  address		= "New {Y}ork",
-  publisher		= "Plenum",
-  year			= "1981"
+@article{ref6,
+	title={Modeling thermal conductivity augmentation of nanofluids using diffusion neural networks},
+	author={Papari, M. M. and Yousefi, F. and Moghadasi, J. and Karimi, H. and Campo, A.},
+	journal={International Journal of Thermal Sciences},
+	year={2011},
+	volume={50},
+	pages={44–52}
 }
 
-%% Chapter in a book in a series with volume titles
-@inproceedings{bib7,
-  author		= "Smith, S. E.",
-  title			= "Neuromuscular blocking drugs in man",
-  editor		= "Zaimis, E.",
-  volume		= "42",
-  booktitle		= "Neuromuscular junction. {H}andbook of experimental pharmacology",
-  pages			= "593--660",
-  address		= "Heidelberg",
-  publisher		= "Springer",
-  year			= "1976"
+@article{ref7,
+	title={Thermal conductivity of non-Newtonian nanofluids: Experimental data and modeling using neural network},
+	author={Hojjat, M. and Etemad, S.Gh. and Bagheri, R. and Thibault, J.},
+	journal={International Journal of Heat and Mass Transfer},
+	year={2011},
+	volume={54},
+	pages={1017–1023}
 }
 
-%% Paper presented at a conference
-@misc{bib8,
-  author		= "Chung, S. T. and Morris, R. L.",
-  title			= "Isolation and characterization of plasmid deoxyribonucleic acid from 
-					Streptomyces fradiae",
-  year			= "1978",
-  note			= "Paper presented at the 3rd international symposium on the genetics 
-					of industrial microorganisms, University of {W}isconsin, {M}adison, 
-					4--9 June 1978"
+@article{ref8,
+	title={Thermal conductivity of heterogeneous two-component systems},
+	author={Hamilton, R.L. and Crosser, O.K.},
+	journal={I \& EC Fundam.},
+	year={1962},
+	volume={125 (3)},
+	pages={187–191}
 }
 
-%% Data citation example
-@misc{bib9,
-  author		= "Hao, Z. and AghaKouchak, A. and Nakhjiri, N. and Farahmand, A.",
-  title			= "Global integrated drought monitoring and prediction system (GIDMaPS) data sets", 
-  year			= "2014",
-  note			= "figshare \url{https://doi.org/10.6084/m9.figshare.853801}"
+@article{ref9,
+	title={New equations for heat and mass transfer in turbulent pipe and channel flow},
+	author={Gnielinski, V.},
+	journal={Int. Chem. Eng.},
+	year={1976},
+	volume={16},
+	pages={359-368}
 }
 
-%% Preprint citation example
-@misc{bib10, 
-  author		= "Babichev, S. A. and Ries, J. and Lvovsky, A. I.",
-  title			= "Quantum scissors: teleportation of single-mode optical states by means 
-					of a nonlocal single photon", 
-  year			= "2002",
-  note			= "Preprint at \url{https://arxiv.org/abs/quant-ph/0208066v1}"
+@article{ref10,
+	title={Thermal entry length solutions for the circular tube and parallel plates},
+	author={Shah, R. K},
+	booktitle={Proc. 3th Intl. Heat Mass Trans. Conf.},
+	year={1975},
+	pages={11-75}
 }
 
-@article{bib11,
-  author		= "Beneke, M. and Buchalla, G. and Dunietz, I.",
-  title			= "Mixing induced {CP} asymmetries in inclusive {B} decays",
-  journal		= "Phys. {L}ett.",
-  volume		= "B393",
-  year			= "1997",
-  pages			= "132-142",
-  archivePrefix		= "arXiv",
-  eprint		= "0707.3168",
-  primaryClass		= "gr-gc"
+@book{ref11,
+	title={Neural networks for chemical engineers},
+	author={Bulsari, A.B.},
+	year={1995},
+	publisher={Elsevier Science Inc., New York}
 }
 
-@softmisc{bib12,
-  author		= "Stahl, B.",
-  title			= "deep{SIP}: deep learning of {S}upernova {I}a {P}arameters",
-  version		= "0.42",
-  keywords		= "Software",
-  howpublished		= "Astrophysics {S}ource {C}ode {L}ibrary",
-  year			= "2020",
-  month			= "Jun",
-  eid			= "ascl:2006.023",
-  pages			= "ascl:2006.023",
-  archivePrefix		= "ascl",
-  eprint		= "2006.023",
-  adsurl		= "{https://ui.adsabs.harvard.edu/abs/2020ascl.soft06023S}",
-  adsnote		= "Provided by the SAO/NASA Astrophysics Data System"
+@article{zhang2021,
+	author    = {Y. Zhang and others},
+	title     = {Investigation of convective heat transfer enhancement of TiO2-water nanofluids},
+	journal   = {Journal of Heat Transfer},
+	year      = {2021},
+	volume    = {...},
+	pages     = {...},
+	doi       = {...},
 }
 
-@article{bib13,
-  author = "Abbott, T. M. C. and others",
-  collaboration = "DES",
-  title = "{Dark Energy Survey Year 1 Results: Constraints on Extended Cosmological Models from Galaxy Clustering and Weak Lensing}",
-  eprint = "1810.02499",
-  archivePrefix = "arXiv",
-  primaryClass = "astro-ph.CO",
-  reportNumber = "FERMILAB-PUB-18-507-PPD",
-  doi = "10.1103/PhysRevD.99.123505",
-  journal = "Phys. Rev. D",
-  volume = "99",
-  number = "12",
-  pages = "123505",
-  year = "2019"
+@article{wang2022,
+	author    = {J. Wang and others},
+	title     = {Influence of particle size and volume fraction on thermal conductivity of TiO2-based nanofluids},
+	journal   = {International Journal of Heat and Mass Transfer},
+	year      = {2022},
+	volume    = {...},
+	pages     = {...},
+	doi       = {...},
 }
 
-%%============================================================================%%
-%% while using chicago reference style, both abbreviated and expanded form of %%
-%% author name format is acceptable. Refer below example for expanded form    %%
-%%============================================================================%%
+@article{li2023,
+	author    = {X. Li and others},
+	title     = {Machine learning predictions of heat transfer coefficients in diverse nanofluids},
+	journal   = {Applied Thermal Engineering},
+	year      = {2023},
+	volume    = {...},
+	pages     = {...},
+	doi       = {...},
+}
 
-%%  author		= "{Cameron, Deborah}", - single author
-%%  author		= "{Saito, Yukio} and {Hyuga, Hiroyuki}", - double author 
+@article{chen2023,
+	author    = {Z. Chen and others},
+	title     = {Convective heat transfer performance of TiO2-ethylene glycol nanofluids under turbulent flow},
+	journal   = {International Journal of Heat and Fluid Flow},
+	year      = {2023},
+	volume    = {...},
+	pages     = {...},
+	doi       = {...},
+}
 
-%%======================================%%
-%% Example for author names with suffix %%
-%%======================================%%
-
-%%  author		= "{Price, R. A. Jr} and {Curry, N. {III}} and McCann, K. E. and 
-%%					Fielding, J. L. and {Abercrombie, E. Jr}",
+@article{kim2024,
+	author    = {H. Kim and others},
+	title     = {Forced convective heat transfer of TiO2-ethylene glycol nanofluids in a horizontal tube},
+	journal   = {Heat and Mass Transfer},
+	year      = {2024},
+	volume    = {...},
+	pages     = {...},
+	doi       = {...},
+}
