--- a/NN/tables/backward.tex
+++ b/NN/tables/backward.tex
@@ -5,7 +5,7 @@
 \hline
  features                                                                                                           &    R2 \\
 \hline
- ['flow_rate1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']       & 76.09 \\
+ ['flow\_rate1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']       & 76.09 \\
  ['conc_nano1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']       & 43.37 \\
  ['flow_rate1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']       & 88.38 \\
  ['flow_rate1', 'conc_nano1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']    & 58.85 \\
