--- a/NN/tables/forward.tex
+++ b/NN/tables/forward.tex
@@ -3,43 +3,48 @@
             \centering
             \begin{tabular}{lr}
 \hline
- features                                                            &     R2 \\
+ features                                                                           &    R2 \\
 \hline
- ['X_D1']                                                            &  14.09 \\
- ['flow_rate2']                                                      &  38.24 \\
- ['conc_nano2']                                                      &  11.24 \\
- ['Kfluid2']                                                         &  62.95 \\
- ['heat_flux2']                                                      &   0.14 \\
- ['flow_rate1', 'Kfluid2']                                           &  63.47 \\
- ['conc_nano1', 'Kfluid2']                                           &  63.88 \\
- ['Kfluid1', 'Kfluid2']                                              &  62.25 \\
- ['heat_flux1', 'Kfluid2']                                           &  77.7  \\
- ['X_D1', 'Kfluid2']                                                 &  76.02 \\
- ['flow_rate2', 'Kfluid2']                                           & -31.69 \\
- ['conc_nano2', 'Kfluid2']                                           &  86.62 \\
- ['heat_flux2', 'Kfluid2']                                           &  76.09 \\
- ['X_D2', 'Kfluid2']                                                 &  78.17 \\
- ['flow_rate1', 'Kfluid2', 'conc_nano2']                             &  76.79 \\
- ['conc_nano1', 'Kfluid2', 'conc_nano2']                             &  87.83 \\
- ['Kfluid1', 'Kfluid2', 'conc_nano2']                                &  88.24 \\
- ['heat_flux1', 'Kfluid2', 'conc_nano2']                             &  91.58 \\
- ['X_D1', 'Kfluid2', 'conc_nano2']                                   &  82.59 \\
- ['flow_rate2', 'Kfluid2', 'conc_nano2']                             &  53.86 \\
- ['heat_flux2', 'Kfluid2', 'conc_nano2']                             &  75.43 \\
- ['X_D2', 'Kfluid2', 'conc_nano2']                                   &  64.89 \\
- ['flow_rate1', 'Kfluid2', 'conc_nano2', 'heat_flux1']               &  93.27 \\
- ['conc_nano1', 'Kfluid2', 'conc_nano2', 'heat_flux1']               &  76.38 \\
- ['Kfluid1', 'Kfluid2', 'conc_nano2', 'heat_flux1']                  &  92.71 \\
- ['X_D1', 'Kfluid2', 'conc_nano2', 'heat_flux1']                     &  86.97 \\
- ['flow_rate2', 'Kfluid2', 'conc_nano2', 'heat_flux1']               &  74.46 \\
- ['heat_flux2', 'Kfluid2', 'conc_nano2', 'heat_flux1']               &  81.11 \\
- ['X_D2', 'Kfluid2', 'conc_nano2', 'heat_flux1']                     &  63.44 \\
- ['conc_nano1', 'Kfluid2', 'conc_nano2', 'heat_flux1', 'flow_rate1'] &  83.2  \\
- ['Kfluid1', 'Kfluid2', 'conc_nano2', 'heat_flux1', 'flow_rate1']    &  66.6  \\
- ['X_D1', 'Kfluid2', 'conc_nano2', 'heat_flux1', 'flow_rate1']       &  82.41 \\
- ['flow_rate2', 'Kfluid2', 'conc_nano2', 'heat_flux1', 'flow_rate1'] &  49.69 \\
- ['heat_flux2', 'Kfluid2', 'conc_nano2', 'heat_flux1', 'flow_rate1'] &  61.91 \\
- ['X_D2', 'Kfluid2', 'conc_nano2', 'heat_flux1', 'flow_rate1']       &  70.43 \\
+ ['X\_D1']                                                                          & 14.85 \\
+ ['flow\_rate2']                                                                    & 27.69 \\
+ ['conc\_nano2']                                                                    & 11.15 \\
+ ['Kfluid2']                                                                        & 62.66 \\
+ ['heat\_flux2']                                                                    & -4.92 \\
+ ['flow\_rate1', 'Kfluid2']                                                         & 75.33 \\
+ ['conc\_nano1', 'Kfluid2']                                                         & 64.49 \\
+ ['Kfluid1', 'Kfluid2']                                                             & 67.9  \\
+ ['heat\_flux1', 'Kfluid2']                                                         & 74.3  \\
+ ['X\_D1', 'Kfluid2']                                                               & 67.3  \\
+ ['flow\_rate2', 'Kfluid2']                                                         &  9.94 \\
+ ['conc\_nano2', 'Kfluid2']                                                         & 87.59 \\
+ ['heat\_flux2', 'Kfluid2']                                                         & 56.8  \\
+ ['X\_D2', 'Kfluid2']                                                               & 67.59 \\
+ ['flow\_rate1', 'Kfluid2', 'conc\_nano2']                                          & 60.42 \\
+ ['conc\_nano1', 'Kfluid2', 'conc\_nano2']                                          & 78.36 \\
+ ['Kfluid1', 'Kfluid2', 'conc\_nano2']                                              & 79.88 \\
+ ['heat\_flux1', 'Kfluid2', 'conc\_nano2']                                          & 90.37 \\
+ ['X\_D1', 'Kfluid2', 'conc\_nano2']                                                & 84.51 \\
+ ['flow\_rate2', 'Kfluid2', 'conc\_nano2']                                          & 65.14 \\
+ ['heat\_flux2', 'Kfluid2', 'conc\_nano2']                                          & 57.1  \\
+ ['X\_D2', 'Kfluid2', 'conc\_nano2']                                                & 54.6  \\
+ ['flow\_rate1', 'Kfluid2', 'conc\_nano2', 'heat\_flux1']                           & 62.62 \\
+ ['conc\_nano1', 'Kfluid2', 'conc\_nano2', 'heat\_flux1']                           & 92.87 \\
+ ['Kfluid1', 'Kfluid2', 'conc\_nano2', 'heat\_flux1']                               & 80.94 \\
+ ['X\_D1', 'Kfluid2', 'conc\_nano2', 'heat\_flux1']                                 & 87.63 \\
+ ['flow\_rate2', 'Kfluid2', 'conc\_nano2', 'heat\_flux1']                           & 82.76 \\
+ ['heat\_flux2', 'Kfluid2', 'conc\_nano2', 'heat\_flux1']                           & 55.75 \\
+ ['X\_D2', 'Kfluid2', 'conc\_nano2', 'heat\_flux1']                                 & 75.43 \\
+ ['flow\_rate1', 'Kfluid2', 'conc\_nano2', 'heat\_flux1', 'conc\_nano1']            & 49.56 \\
+ ['Kfluid1', 'Kfluid2', 'conc\_nano2', 'heat\_flux1', 'conc\_nano1']                & 93.06 \\
+ ['X\_D1', 'Kfluid2', 'conc\_nano2', 'heat\_flux1', 'conc\_nano1']                  & 87.49 \\
+ ['flow\_rate2', 'Kfluid2', 'conc\_nano2', 'heat\_flux1', 'conc\_nano1']            & 69.35 \\
+ ['heat\_flux2', 'Kfluid2', 'conc\_nano2', 'heat\_flux1', 'conc\_nano1']            & 65.5  \\
+ ['X\_D2', 'Kfluid2', 'conc\_nano2', 'heat\_flux1', 'conc\_nano1']                  & 64.18 \\
+ ['flow\_rate1', 'Kfluid2', 'conc\_nano2', 'heat\_flux1', 'conc\_nano1', 'Kfluid1'] & 84.19 \\
+ ['X\_D1', 'Kfluid2', 'conc\_nano2', 'heat\_flux1', 'conc\_nano1', 'Kfluid1']       & 87.54 \\
+ ['flow\_rate2', 'Kfluid2', 'conc\_nano2', 'heat\_flux1', 'conc\_nano1', 'Kfluid1'] & 76.61 \\
+ ['heat\_flux2', 'Kfluid2', 'conc\_nano2', 'heat\_flux1', 'conc\_nano1', 'Kfluid1'] & 71.81 \\
+ ['X\_D2', 'Kfluid2', 'conc\_nano2', 'heat\_flux1', 'conc\_nano1', 'Kfluid1']       & 77.34 \\
 \hline
 \end{tabular}
             \caption{Results of Forward Feature Selection for different features}
