--- a/NN/tables/jackknife.tex
+++ b/NN/tables/jackknife.tex
@@ -3,18 +3,18 @@
             \centering
             \begin{tabular}{lrr}
 \hline
- Feature    &   Sensitivity &   Variance \\
+ Feature     &   Sensitivity &   Variance \\
 \hline
- Kfluid2    &       6.95649 &   233.488  \\
- X_D1       &      -1.12045 &   896.924  \\
- heat_flux2 &      -2.38643 &    69.6191 \\
- Kfluid1    &      -7.5395  &   518.86   \\
- X_D2       &      -8.17027 &   175.112  \\
- heat_flux1 &      -8.9244  &   774.163  \\
- flow_rate1 &      -9.70935 &   239.079  \\
- conc_nano1 &      -9.96139 &   611.853  \\
- flow_rate2 &     -14.6011  &    70.4603 \\
- conc_nano2 &     -19.1027  &    75.5187 \\
+ Kfluid2     &      16.7308  &   149.29   \\
+ heat\_flux2 &      11.0725  &   134.77   \\
+ X\_D1       &      10.0772  &   645.93   \\
+ flow\_rate2 &       4.83764 &   792.954  \\
+ X\_D2       &       3.97001 &   194.98   \\
+ flow\_rate1 &       1.0037  &   874.711  \\
+ Kfluid1     &      -0.31073 &   554.655  \\
+ conc\_nano1 &      -5.82048 &   116.927  \\
+ heat\_flux1 &      -8.58076 &   242.628  \\
+ conc\_nano2 &     -11.9773  &    43.7778 \\
 \hline
 \end{tabular}
             \caption{Results of Jackknife Sensitivity Analysis}
