--- a/NN/tables/weight-analysis.tex
+++ b/NN/tables/weight-analysis.tex
@@ -3,18 +3,18 @@
             \centering
             \begin{tabular}{lr}
 \hline
- Feature    &   Weight Importance \\
+ Feature     &   Weight Importance \\
 \hline
- conc_nano2 &            0.582369 \\
- X_D2       &            0.536201 \\
- flow_rate2 &            0.460157 \\
- heat_flux2 &            0.459936 \\
- heat_flux1 &            0.45227  \\
- Kfluid2    &            0.44373  \\
- conc_nano1 &            0.432457 \\
- flow_rate1 &            0.420933 \\
- X_D1       &            0.417609 \\
- Kfluid1    &            0.366802 \\
+ Kfluid2     &            0.543577 \\
+ flow\_rate2 &            0.491675 \\
+ conc\_nano1 &            0.468493 \\
+ X\_D1       &            0.447168 \\
+ conc\_nano2 &            0.425318 \\
+ flow\_rate1 &            0.392215 \\
+ heat\_flux1 &            0.368096 \\
+ heat\_flux2 &            0.367584 \\
+ Kfluid1     &            0.357384 \\
+ X\_D2       &            0.337244 \\
 \hline
 \end{tabular}
             \caption{Results of Weight Analysis}
