--- a/NN/tables/backward.tex
+++ b/NN/tables/backward.tex
@@ -3,28 +3,19 @@
             \centering
             \begin{tabular}{lr}
 \hline
- features                                                                                                           &    R2 \\
+ features                                                                                                                           &    R2 \\
 \hline
- ['flow\_rate1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']       & 76.09 \\
- ['conc_nano1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']       & 43.37 \\
- ['flow_rate1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']       & 88.38 \\
- ['flow_rate1', 'conc_nano1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']    & 58.85 \\
- ['flow_rate1', 'conc_nano1', 'Kfluid1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']       & 67.6  \\
- ['flow_rate1', 'conc_nano1', 'Kfluid1', 'heat_flux1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2'] & 82.77 \\
- ['flow_rate1', 'conc_nano1', 'Kfluid1', 'heat_flux1', 'X_D1', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']       & 57.26 \\
- ['flow_rate1', 'conc_nano1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'Kfluid2', 'heat_flux2', 'X_D2']       & 74.21 \\
- ['flow_rate1', 'conc_nano1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'heat_flux2', 'X_D2']    & 55.88 \\
- ['flow_rate1', 'conc_nano1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'X_D2']       & 64.76 \\
- ['flow_rate1', 'conc_nano1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2'] & 73.37 \\
- ['Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']                     & 83.52 \\
- ['flow_rate1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']                  & 67.85 \\
- ['flow_rate1', 'Kfluid1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']                     & 81.99 \\
- ['flow_rate1', 'Kfluid1', 'heat_flux1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']               & 74.67 \\
- ['flow_rate1', 'Kfluid1', 'heat_flux1', 'X_D1', 'conc_nano2', 'Kfluid2', 'heat_flux2', 'X_D2']                     & 83.17 \\
- ['flow_rate1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'Kfluid2', 'heat_flux2', 'X_D2']                     & 16.53 \\
- ['flow_rate1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'heat_flux2', 'X_D2']                  & 74.26 \\
- ['flow_rate1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'X_D2']                     & 66.81 \\
- ['flow_rate1', 'Kfluid1', 'heat_flux1', 'X_D1', 'flow_rate2', 'conc_nano2', 'Kfluid2', 'heat_flux2']               & 69.09 \\
+ ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2'] & 82.69 \\
+ ['conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2']                & 62.45 \\
+ ['flow\_rate1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2']                & 81.63 \\
+ ['flow\_rate1', 'conc\_nano1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2']            & 73.64 \\
+ ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2']                & 72.94 \\
+ ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2']          & 67.45 \\
+ ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2']                & 68.03 \\
+ ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'Kfluid2', 'heat\_flux2', 'X\_D2']                & 76.57 \\
+ ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'heat\_flux2', 'X\_D2']            & 38.28 \\
+ ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'X\_D2']                & 69.39 \\
+ ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2']          & 81.61 \\
 \hline
 \end{tabular}
             \caption{Results of Backward Feature Elimination}
